# todollama

./: .gitignore  BuildAndPublish.md  CONGRESS.md  README.md  TODO.md  example2.html  example_congress_usage.py  example_custom_congress.py  example_report.html  pyproject.toml  test_congress.py  test_congress_hardcoding.py  test_enhanced_executive_summary.py  test_enhanced_file_selection.py  test_file_diff_fix.py  test_improved_file_selection.py  test_improved_file_writing.py  test_magi_representatives.py  test_query_types_in_report.py  test_timing_enhancements.py  test_variable_separation.py
src/gitllama/: __init__.py  ai_coordinator.py  ai_decision_formatter.py  ai_query.py  branch_analyzer.py  cli.py  file_modifier.py  git_operations.py  ollama_client.py  project_analyzer.py  report_generator.py  simplified_coordinator.py
src/gitllama/ai/: README_REPRESENTATIVES.md  __init__.py  client.py  congress.py  query.py  representatives.py
src/gitllama/core/: coordinator.py  git_operations.py
src/gitllama/todo/: analyzer.py  executor.py  planner.py
src/gitllama/utils/: __init__.py  context_tracker.py  metrics.py  reports.py
tests/: test_git_operations.py
